# hhermesbot

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  QA_REPORT.md  README.md  colegio-bot.service  config.toml  deploy.sh  docker-compose.cima20paas.yml  docker-compose.yml
migrations/: 001_initial.sql  003_broadcast_usage.sql  004_organization.sql  005_user_is_member.sql  006_fix_broadcast_created_at.sql  006_fix_broadcasts_created_at.sql  007_create_payments_table.sql
src/: config.rs  db.rs  handlers.rs  ia.rs  main.rs  relay.rs  text_processor.rs  web_server.rs  wizard.rs
src/db/: broadcast.rs
src/dialogue/: handlers.rs  states.rs  unified.rs
src/handlers/: broadcast.rs  broadcast_extended.rs  pagos.rs
src/models/: broadcast.rs  empresa.rs  mod.rs  servicio.rs  user.rs
src/payments/: mod.rs  webhook.rs
src/utils/: mod.rs
